# TDMasterBin

./: .gitignore  pyproject.toml
Old_script/: hypogram_and_spectrogram.py
predictors/: karim_net1.pth  sors_net1.pth  sors_net2.pth  sors_net3.pth  sors_net4.pth  sorsmulti_net1.pth  sorsmulti_net2.pth
td_dreem_bin/: CNN_dreem.py  __init__.py  load_data.py  spectrogram.py  test_model.py
td_dreem_bin/assess_models/: assess_example.py  assess_sors2017.py  assess_sors2017multi.py
td_dreem_bin/first_part/: generate_all_night_figures.py  generate_spectrogram_kaggle.py  generate_tp_record.py  hypnogram_and_spectrogram.py  mtspectrum_stages.py  night_representation.py  plot_spectrogram_kaggle.py  spectrum_stages.py
td_dreem_bin/load_data/: data_kaggle.py  data_records.py  kaggle_loader.py  load_data.py  multi_channel.py  single_channel.py
td_dreem_bin/models/: CNN_example.py  Sors2017.py  Sors2017_multi.py
td_dreem_bin/second_part/: generate_dataset_features.py  generate_dataset_spectral.py  train_classifier_features.py  train_classifier_spectrogram.py
td_dreem_bin/td_first_part/: hypnogram_and_spectrogram.py  spectromgram_stages.py
td_dreem_bin/third_part/: KarimA.py
td_dreem_bin/utils/: accelerometer.py  event_detections.py  hypnogram.py  scores.py  spectrogram.py  utils.py
tests/: test_td_dreem_bin.py
